# xsolla_payments_example_rust

./: .env  .gitignore  Cargo.toml  Makefile  README.md  TODO
src/: macroses.rs  main.rs
src/application/: mod.rs
src/http/: ___handlers.rs  _rocket_handlers.rs  handlers.rs  messages.rs  mod.rs  signature.rs
src/http/api_types/: callback_message.rs  canceled_payment.rs  checkout.rs  error.rs  helpers.rs  mod.rs  payment_details.rs  project_settings.rs  purchase.rs  refund_details.rs  subscription.rs  success_payment.rs  token_request_body.rs  total.rs  transaction.rs  user.rs  user_exists_check.rs  virtual_currency.rs  virtual_items.rs
test_env/: config.env.asc
