[package]
name = "xsolla_payments_example_rust"
version = "0.1.0"
authors = ["Pavel Ershov <devnulpavel@gmail.com>"]
edition = "2018"

[dependencies]
eyre = "0.6"
color-eyre = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-error = "0.1"
dotenv = "0.15"
tokio = { version = "1.9", features = ["full"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
reqwest = {version = "0.11", features = ["rustls-tls"]}
warp = "0.3"
handlebars = "4.1"
url = "2.2"